// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIndicator renders correctly (snapshot) 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "padding": 8,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#007bff",
        "borderRadius": 4,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0.8,
        "transform": [
          {
            "translateY": 0,
          },
        ],
        "width": 8,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#007bff",
        "borderRadius": 4,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0.8,
        "transform": [
          {
            "translateY": 0,
          },
        ],
        "width": 8,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#007bff",
        "borderRadius": 4,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0.8,
        "transform": [
          {
            "translateY": 0,
          },
        ],
        "width": 8,
      }
    }
  />
</View>
`;

exports[`LoadingIndicator renders in fullScreen mode 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 9999,
      },
      {
        "backgroundColor": "#123456",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 8,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#007bff",
          "borderRadius": 4,
          "height": 8,
          "marginHorizontal": 4,
          "opacity": 0.8,
          "transform": [
            {
              "translateY": 0,
            },
          ],
          "width": 8,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#007bff",
          "borderRadius": 4,
          "height": 8,
          "marginHorizontal": 4,
          "opacity": 0.8,
          "transform": [
            {
              "translateY": 0,
            },
          ],
          "width": 8,
        }
      }
    />
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#007bff",
          "borderRadius": 4,
          "height": 8,
          "marginHorizontal": 4,
          "opacity": 0.8,
          "transform": [
            {
              "translateY": 0,
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`LoadingIndicator renders with custom color and size 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "padding": 8,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ff0000",
        "borderRadius": 8,
        "height": 16,
        "marginHorizontal": 8,
        "opacity": 0.8,
        "transform": [
          {
            "translateY": 0,
          },
        ],
        "width": 16,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ff0000",
        "borderRadius": 8,
        "height": 16,
        "marginHorizontal": 8,
        "opacity": 0.8,
        "transform": [
          {
            "translateY": 0,
          },
        ],
        "width": 16,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ff0000",
        "borderRadius": 8,
        "height": 16,
        "marginHorizontal": 8,
        "opacity": 0.8,
        "transform": [
          {
            "translateY": 0,
          },
        ],
        "width": 16,
      }
    }
  />
</View>
`;
